--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -112,7 +112,7 @@ h1 {
     display: flex;
     position: absolute;
     top: 120px;
-    left: 5px;
+    left: 0;
     width: 100%;
     height: 100px;
 }
@@ -875,12 +875,245 @@ h1 {
 
 }
 
+
+/* 
+    LANDSCAPE 640 x (between 360 and 420)
+*/
+
+  @media (min-width: 640px) and (min-height: 360px) and (max-height: 420px) {
+
+    header {
+        width: 640px;
+        margin: 0 auto;
+    }
+
+    h1 {
+        width: 680px;
+        height: 30px;
+        padding: 5px 0;
+        font-size: 20px;
+
+    }
+
+    /* ################################################################################## */
+    /* LAYOUT OF THE CANVAS                                                                */
+
+    #canvas {
+        width: 640px;
+        height: 320px;
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* FIRST ROW                                                                     */
+    #first-row {
+        top: 0;
+        height: 50px;
+    }
+
+    #computer-score {
+        margin-left: 5px;
+        font-size: 20px;
+    }
+
+    #user-score {
+        margin-right: 5px;
+        font-size: 20px;
+    }
+
+    #settings-panel {
+        width: 240px;
+    }
+
+    #rounds-counter-panel {
+        width: 280px;
+        font-size: 20px;
+    }
+
+    #rounds-counter-text {
+        font-size: 17px;
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* SECOND ROW                                                                   */
+    #second-row {
+        top: 50px;
+        height: 30px;
+    }
+
+    #outcome-text {
+        font-size: 30px;
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* THIRD ROW                                                                     */
+    #third-row {
+        width: 100%;
+        top: 80px;
+        height: 100px;
+    }
+
+    #computer-pick-image-panel {
+        width: 100px;
+        height:inherit;
+    }
+
+    #computer-pick-image {
+        top: 0;
+        left: 0;
+        height: 100px;
+        width: 100px;
+    }
+
+    #user-pick-image-panel {
+        width: 100px;
+        height: 100px;
+    }
+
+    #user-pick-image {
+        top: 0;
+        left: 0;
+        height: 100px;
+        width: 100px;
+    }
+
+    #versus-text {
+        font-size: 20px;        
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* FOURTH ROW                                                                   */
+    #fourth-row {
+        top: 150px;
+        height:20px;
+    }
+    #message-text {
+        font-size: 15px;
+    }
+    
+    #restart-button {
+        top: 190px;
+        height:50px;
+        width: 100%;
+        height: 30px;
+    }
+
+    #restart-button img {
+        top: 0;
+        left: 0;
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-option-panel {
+        box-sizing: border-box;
+        top: 240px;
+        left: 0;
+        height: 80px;
+        width: 100%;
+    }
+
+    /* ############################################################################ */
+    /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
+    #user-rock-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-rock-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-rock-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-paper-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-paper-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-paper-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-scissors-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-scissors-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+
+    #user-scissors-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-lizard-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-lizard-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-lizard-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-spock-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-spock-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-spock-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    @keyframes message-display {
+        0% {
+            left: 320px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
+    }
+
+}
+
+
 /* 
     ##Device = Tablets, Ipads (landscape)
     ##Screen = B/w 768px to 1024px
   */
 
-@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+@media (min-width: 768px) and (max-width: 1024px) {
     header {
         width: 700px;
         margin: 0 auto;
@@ -949,6 +1182,7 @@ h1 {
     #third-row {
         top: 120px;
         height: 150px;
+        width: 720px;
     }
     #computer-pick-image-panel {
         margin-left: 20px;
@@ -1586,5 +1820,239 @@ h1 {
 
     }
 
+
+}
+
+
+/* VARIOUS LANDSCAPES */
+
+/* 
+    LANDSCAPE 640 x (between 360 and 485)
+*/
+
+@media (min-width: 800px) and (min-height: 360px) and (max-height: 485px) {
+
+    header {
+        width: 640px;
+        margin: 0 auto;
+    }
+
+    h1 {
+        width: 680px;
+        height: 30px;
+        padding: 5px 0;
+        font-size: 20px;
+
+    }
+
+    /* ################################################################################## */
+    /* LAYOUT OF THE CANVAS                                                                */
+
+    #canvas {
+        width: 640px;
+        height: 320px;
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* FIRST ROW                                                                     */
+    #first-row {
+        top: 0;
+        height: 50px;
+    }
+
+    #computer-score {
+        margin-left: 5px;
+        font-size: 20px;
+    }
+
+    #user-score {
+        margin-right: 5px;
+        font-size: 20px;
+    }
+
+    #settings-panel {
+        width: 240px;
+    }
+
+    #rounds-counter-panel {
+        width: 280px;
+        font-size: 20px;
+    }
+
+    #rounds-counter-text {
+        font-size: 17px;
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* SECOND ROW                                                                   */
+    #second-row {
+        top: 50px;
+        height: 30px;
+    }
+
+    #outcome-text {
+        font-size: 30px;
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* THIRD ROW                                                                     */
+    #third-row {
+        width: 100%;
+        top: 80px;
+        height: 100px;
+    }
+
+    #computer-pick-image-panel {
+        width: 100px;
+        height:inherit;
+    }
+
+    #computer-pick-image {
+        top: 0;
+        left: 0;
+        height: 100px;
+        width: 100px;
+    }
+
+    #user-pick-image-panel {
+        width: 100px;
+        height: 100px;
+    }
+
+    #user-pick-image {
+        top: 0;
+        left: 0;
+        height: 100px;
+        width: 100px;
+    }
+
+    #versus-text {
+        font-size: 20px;        
+    }
+
+    /* ----------------------------------------------------------------------------- */
+    /* FOURTH ROW                                                                   */
+    #fourth-row {
+        top: 150px;
+        height:20px;
+    }
+    #message-text {
+        font-size: 15px;
+    }
+    
+    #restart-button {
+        top: 190px;
+        height:50px;
+        width: 100%;
+        height: 30px;
+    }
+
+    #restart-button img {
+        top: 0;
+        left: 0;
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-option-panel {
+        box-sizing: border-box;
+        top: 240px;
+        left: 0;
+        height: 80px;
+        width: 100%;
+    }
+
+    /* ############################################################################ */
+    /* PANEL WITH OPTIONS FROM WHICH THE USER CAN PICK THEIR MOVE                  */
+    #user-rock-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-rock-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-rock-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-paper-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-paper-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-paper-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-scissors-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-scissors-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+
+    #user-scissors-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-lizard-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-lizard-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-lizard-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-spock-button {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-spock-button-image {
+        width: 50px;
+        height: 50px;
+    }
+
+    #user-spock-button-image-gray {
+        width: 50px;
+        height: 50px;
+    }
+
+    @keyframes message-display {
+        0% {
+            left: 320px;
+        }
+
+        90% {
+            left: -400px;
+        }
+
+        100% {
+            left: -640px;
+        }
+
+    }
 
 }
