--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6,16 +6,13 @@
     box-sizing: border-box;
 }
 
-/* ########################################################### */
-/* SIZE : 320px x 480px */
-/* ########################################################### */
-
 h1 {
     animation: fade-in 10s;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
 }
 
+/* Container for the home page */
 .canvas {
     position: relative;
     top: 0;
@@ -29,6 +26,7 @@ h1 {
     perspective: 1200px;
 }
 
+/* Button that takes user to the game page */
 #beginButton {
     position:absolute;
     top: 300px;
@@ -37,8 +35,6 @@ h1 {
 #beginButton a {
     position:absolute;
     top: 0;
-    /* display: block; */
-    /* margin: 0 auto; */
     left:auto;
     width: 300px;
     text-align: center;
@@ -59,7 +55,7 @@ h1 {
     background-color: #bbd1e1;
     transform: translateY(5px);
 }
-
+/* The panel wioth rules of the game */
 .rules-panel {
     position: absolute;
     top: 400px;
@@ -74,7 +70,7 @@ h1 {
     list-style: none;
     padding: 5px;
 }
-
+/* The panel with a quick manual */
 .quick-manual {
     position: absolute;
     top: 730px;
@@ -88,6 +84,8 @@ h1 {
 .quick-manual p {
     padding: 5px;
 }
+
+/* 3D-Cube general settings for the container */
 .cube {
     position: absolute;
     top: 100px;
@@ -101,18 +99,7 @@ h1 {
 
     animation: animate 4s linear infinite;
 }
-
-.cube .face {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
+/* General settings for all the divs in the container */
 .cube div {
     position: absolute;
     top: 0;
@@ -123,34 +110,30 @@ h1 {
     justify-content: center;
     align-items: center;
 }
-
+/* Front side , top-most layer */
 .cube .face-rock {
     transform: translateZ(200px);
     background-color: rgba(200, 0, 10, 0.3);
-
 }
-
+/* Front side, middle layer with the picture on it */
 .cube .pic-rock {
     transform: translateZ(199px);
     background-image: url("../images/webp/rock.webp");
     background-repeat: no-repeat;
-    /* Do not repeat the image */
-    background-size: contain;
-    /* Resize the background image to cover the entire container */
-
+    background-size: contain;    
 }
-
+/* Front side, bottom layer with a transparent white background */
 .cube .background-rock {
     transform: translateZ(198px);
     background-color: rgba(255, 255, 255, 0.5);
 }
-
+/* Right side, top-most layer */
 .cube .face-paper {
     transform-origin: center right;
     transform: rotateY(90deg);
     background-color: rgba(0, 200, 0, 0.3);
 }
-
+/* Right side, middle layer with the picture on it */
 .cube .pic-paper {
     transform-origin: center right;
     transform: rotateY(90deg) translateZ(-1px);
@@ -159,19 +142,19 @@ h1 {
     /* Do not repeat the image */
     background-size: contain;
 }
-
+/* Right side, bottom layer with a transparent white background */
 .cube .background-paper {
     transform-origin: center right;
     transform: rotateY(90deg) translateZ(-2px);
     background-color: rgba(255, 255, 255, 0.5);
 }
-
+/* Left side, top-most layer */
 .cube .face-scissors {
     transform-origin: center left;
     transform: rotateY(-90deg);
     background-color: rgba(18, 47, 236, 0.3);
 }
-
+/* Left side, middle layer with the picture on it */
 .cube .pic-scissors {
     transform-origin: center left;
     transform: rotateY(-90deg) translateZ(-1px);
@@ -180,20 +163,20 @@ h1 {
     /* Do not repeat the image */
     background-size: contain;
 }
-
+/* Left side, bottom layer with a transparent white background */
 .cube .background-scissors {
     transform-origin: center left;
     transform: rotateY(-90deg) translateZ(-2px);
     background-color: rgba(255, 255, 255, 0.5);
 }
-
+/* Rear side, top-most layer */
 .cube .face-lizard {
     transform-origin: center center;
     transform: rotateY(180deg);
 
     background-color: rgba(149, 236, 18, 0.3);
 }
-
+/* Rear side, middle layer with the picture on it */
 .cube .pic-lizard {
     transform-origin: center center;
     transform: rotateY(180deg) translateZ(-1px);
@@ -203,20 +186,20 @@ h1 {
     /* Do not repeat the image */
     background-size: contain;
 }
-
+/* Rear side, bottom layer with a transparent white background */
 .cube .background-lizard {
     transform-origin: center center;
     transform: rotateY(180deg) translateZ(-2px);
     background-color: rgba(255, 255, 255, 0.5);
 }
-
+/* Top side, top-most layer */
 .cube .face-spock {
     transform-origin: top center;
     transform: rotateX(90deg);
 
     background-color: rgba(207, 236, 18, 0.3);
 }
-
+/* Top side, middle layer with the picture on it */
 .cube .pic-spock {
     transform-origin: top center;
     transform: rotateX(90deg) translateZ(-1px);
@@ -226,13 +209,13 @@ h1 {
     /* Do not repeat the image */
     background-size: contain;
 }
-
+/* Top side, bottom layer with a transparent white background */
 .cube .background-spock {
     transform-origin: top center;
     transform: rotateX(90deg) translateZ(-2px);
     background-color: rgba(255, 255, 255, 0.6);
 }
-
+/* Bottom side, the glowing effect */
 .cube .glow {
     width: 300px;
     height: 300px;
@@ -250,7 +233,7 @@ h1 {
     filter: blur(50px);
 }
 
-
+/* Let the cube rotate */
 @keyframes animate {
     0% {
         transform: rotateX(-30deg) rotateY(0);
@@ -260,7 +243,7 @@ h1 {
         transform: rotateX(-30deg) rotateY(360deg);
     }
 }
-
+/* Fade in the heading */
 @keyframes fade-in {
     from {
         opacity: 0.0;
